# StockVision

./: .gitignore  HANDOFF.md  PROJECT_CONTEXT.MD  README.MD  README.md  package-lock.json  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/api/routers/: health.py  market.py  search.py  stocks.py  technical.py  watchlist.py
apps/api/app/core/: config.py
apps/api/app/models/: stock.py  watchlist.py
apps/api/app/repositories/: in_memory_watchlist_repository.py  market_repository.py  mock_data.py  mock_market_repository.py  mock_search_repository.py  mock_stock_repository.py  search_repository.py  stock_repository.py  watchlist_repository.py
apps/api/app/schemas/: market.py  search.py  stock.py  technical.py  watchlist.py
apps/api/app/services/: market_service.py  search_service.py  stock_service.py  technical_service.py  watchlist_service.py
apps/web/: components.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/constants/: market.ts  navigation.ts
apps/web/hooks/: use-market-status.ts  use-stocks.ts
apps/web/providers/: app-providers.tsx  query-provider.tsx
apps/web/repositories/: market-repository.ts  search-repository.ts  stock-repository.ts
apps/web/services/: market-service.ts  search-service.ts  stock-service.ts  technical-service.ts
apps/web/types/: market.ts  search.ts  stock.ts  technical.ts  watchlist.ts
docs/: phase-1-architecture.md
(+57 files in other folders)
