[project]
name = "stockvision-api"
version = "0.1.0"
description = "FastAPI backend foundation for the StockVision platform."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.5,<1.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "psycopg[binary]>=3.2.3,<4.0.0",
  "redis>=5.2.0,<6.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

